// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatCrashComment > crash: ticket only, no DAG, no error text 1`] = `
"<!-- sweny-run-comment:pr-review -->
## ❌ PR Review

\`\`\`text
╭┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄╮
┆ ✗ crashed                                    ┆
┆ pr-review                                    ┆
┆                                              ┆
┆ nodes       0/0                              ┆
┆ tool calls  0                                ┆
┆ duration    2s                               ┆
╰┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄╯
\`\`\`

The run stopped before finishing. See the job log for details.

<sub>Run with [SWEny](https://github.com/swenyai/sweny): \`npx @sweny-ai/core new\`</sub>
"
`;

exports[`formatRunComment > failure 1`] = `
"<!-- sweny-run-comment:pr-review -->
## ❌ PR Review

\`\`\`text
╭┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄╮
┆ ✗ failed                                     ┆
┆ pr-review                                    ┆
┆                                              ┆
┆ nodes       1/2, 1 failed                    ┆
┆ tool calls  6                                ┆
┆ duration    12s                              ┆
┆ tokens      1.5k                             ┆
┆ cost        $0.05                            ┆
╰┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄╯
\`\`\`

\`\`\`mermaid
graph TB
    gather([Gather ▶])
    analyze[Analyze]
    report[Report]

    gather --> analyze
    analyze --> report

    classDef current fill:#3b82f6,stroke:#1d4ed8,color:#fff,stroke-width:4px
    classDef success fill:#2563eb,stroke:#1d4ed8,color:#fff,stroke-width:2px
    classDef failed fill:#dc2626,stroke:#991b1b,color:#fff,stroke-width:2px
    classDef skipped fill:#64748b,stroke:#475569,color:#fff,stroke-dasharray:5 5
    classDef pending fill:none,stroke:#64748b,color:#64748b,stroke-width:1px
    class gather success
    class analyze failed
    class report pending
\`\`\`

<details>
<summary>Nodes</summary>

| Node | Status | Duration |
| --- | --- | --- |
| Gather | ✅ success | 4s |
| Analyze | ❌ failed | 1m05s |

</details>

<sub>Run with [SWEny](https://github.com/swenyai/sweny): \`npx @sweny-ai/core new\`</sub>
"
`;

exports[`formatRunComment > skipped 1`] = `
"<!-- sweny-run-comment:pr-review -->
## ✅ PR Review

\`\`\`text
╭┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄╮
┆ ✓ passed                                     ┆
┆ pr-review                                    ┆
┆                                              ┆
┆ nodes       1/3, 2 skipped                   ┆
┆ tool calls  1                                ┆
┆ duration    3s                               ┆
┆ tokens      1.5k                             ┆
┆ cost        $0.05                            ┆
╰┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄╯
\`\`\`

\`\`\`mermaid
graph TB
    gather([Gather ▶])
    analyze[Analyze]
    report[Report]

    gather --> analyze
    analyze --> report

    classDef current fill:#3b82f6,stroke:#1d4ed8,color:#fff,stroke-width:4px
    classDef success fill:#2563eb,stroke:#1d4ed8,color:#fff,stroke-width:2px
    classDef failed fill:#dc2626,stroke:#991b1b,color:#fff,stroke-width:2px
    classDef skipped fill:#64748b,stroke:#475569,color:#fff,stroke-dasharray:5 5
    classDef pending fill:none,stroke:#64748b,color:#64748b,stroke-width:1px
    class gather success
    class analyze,report skipped
\`\`\`

<details>
<summary>Nodes</summary>

| Node | Status | Duration |
| --- | --- | --- |
| Gather | ✅ success | - |
| Analyze | ⏭️ skipped | - |
| Report | ⏭️ skipped | - |

</details>

<sub>Run with [SWEny](https://github.com/swenyai/sweny): \`npx @sweny-ai/core new\`</sub>
"
`;

exports[`formatRunComment > success 1`] = `
"<!-- sweny-run-comment:pr-review -->
## ✅ PR Review

\`\`\`text
╭┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄╮
┆ ✓ passed                                     ┆
┆ pr-review                                    ┆
┆                                              ┆
┆ nodes       3/3                              ┆
┆ tool calls  16                               ┆
┆ duration    1m10s                            ┆
┆ tokens      4.5k                             ┆
┆ cost        $0.15                            ┆
╰┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄╯
\`\`\`

\`\`\`mermaid
graph TB
    gather([Gather ▶])
    analyze[Analyze]
    report[Report]

    gather --> analyze
    analyze --> report

    classDef current fill:#3b82f6,stroke:#1d4ed8,color:#fff,stroke-width:4px
    classDef success fill:#2563eb,stroke:#1d4ed8,color:#fff,stroke-width:2px
    classDef failed fill:#dc2626,stroke:#991b1b,color:#fff,stroke-width:2px
    classDef skipped fill:#64748b,stroke:#475569,color:#fff,stroke-dasharray:5 5
    classDef pending fill:none,stroke:#64748b,color:#64748b,stroke-width:1px
    class gather,analyze,report success
\`\`\`

<details>
<summary>Nodes</summary>

| Node | Status | Duration |
| --- | --- | --- |
| Gather | ✅ success | 4s |
| Analyze | ✅ success | 1m05s |
| Report | ✅ success | 900ms |

</details>

<sub>Run with [SWEny](https://github.com/swenyai/sweny): \`npx @sweny-ai/core new\`</sub>
"
`;
